# dmc_ai_mobility

./: .gitignore  AGENTS.md  PLANS.md  README.md  config.toml  dmc_ai_mobility_software_design.md  execplan_bootstrap_robot_node.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
configs/: imu_config.json  motor_config.json  zenoh.json5
doc/: keys_and_payloads.md  zenoh_remote_pubsub.md
doc/remote_pubsub/: zenoh_remote.json5.example  zenoh_remote_pubsub.md
docs/: calibration.md  config_guide.md  debugging.md  deployment.md  dmc_ai_mobility_software_design.md  execplan_bootstrap_robot_node.md  execplan_oled_anim_editor.md  execplan_oled_image_display.md  execplan_oled_mode_manager.md  execplan_oled_settings_actions.md  execplan_oled_ui_modes.md  h264_streaming.md  index.md  keys_and_payloads.md  oled_anim_editor.md  oled_mode_manager.md  oled_preview.md  oled_settings_actions.md  oled_ui_modes.md  software_structure.md  zenoh_operations.md  zenoh_remote_pubsub.md
examples/: example_camera.py  example_i2c.py  example_imu.py  example_lidar_front_distance.py  example_motor.py  example_motor_calibrated.py  remote_zenoh_tool.py  remote_zenoh_ui.py
scripts/: convert_oled_mono1.py  oled_switch_branch.sh  oled_wifi_connect.sh  pull_and_restart.sh  run_robot.sh
src/dmc_ai_mobility/app/: cli.py  health_node.py  oled_mode_manager.py  robot_node.py  (+1 more)
systemd/: dmc-ai-mobility-h264.service  dmc-ai-mobility.service
tests/: test_config_load.py  test_zenoh_keys.py
tools/oled_preview/: oled_anim_editor.py  preview_oled.py  render_oled_sequence.py
(+21 files in other folders)
